# RISC-V

./: .gitattributes  .gitignore  .gitmodules  Doxyfile  LICENSE  Makefile  README.md
archive/: README.md
boards/: report_area_timing.tcl  report_exec_area.tcl  vivado_README.md
boards/area_meas/: muldiv_split_meas.sv
boards/zybo_z720/: build_all.ps1  build_all.py  set_pl_freq.py
docs/: ARCHITECTURE_.md  INTEGRATION_SUMMARY.md  ROADMAP.md  STATUS_REPORT.md  architecture.md  axi_ddr.md  cache.md  fpga_timing_bringup.md  freq_50mhz.md  isa_implemented.md  isa_progress.md  linux_sim.md  opensbi_sim.md  rtl_bug_history.md  verilator_sim.md
docs/opensbi/: rv_soc.dts  rv_soc_hw.dts  rv_soc_lo.dts
rv32i/: Makefile  dmem.sv  rv32i.sv  sim_rv32i.sv
rv32i/script/: vivado_tcl.sh
scripts/vivado/: build.tcl  create_project.tcl  program.tcl
src/rtl/: ARCHITECTURE.md
src/sim/: Dockerfile  Dockerfile.verilator  Makefile
src/software/: Dockerfile  Makefile  link.ld
tests/compliance/: Dockerfile  Makefile
tests/env/: crt_act.S  link_act.ld  model_test.h
tests/linux/: Dockerfile  Dockerfile.buildroot  bootstrap_build.sh  build.sh  build_rootfs.sh  buildroot_rvsoc_defconfig  init.c  kernel_fragment.config  resolve_pc.sh  (+4 more)
tests/riscof/: .gitignore  Dockerfile.run  Makefile  README.md  config.ini  pyproject.toml
tests/riscof/rvcore/: riscof_rvcore.py  run_dut.sh  rvcore_isa.yaml
tests/riscof/rvcore/env/: model_test.h
tests/riscof/sail_cSim/: Dockerfile
tests/riscof/spike/: Dockerfile  riscof_spike.py
tests/riscof/spike/env/: link.ld  model_test.h
(+149 files in other folders)
