[project]
name = "rv-riscof-env"
version = "0.1.0"
description = "RISCOF (RISC-V architectural compliance) environment for this core"
requires-python = ">=3.10"
dependencies = [
    "riscof==1.25.3",
]

[tool.uv]
# riscof 1.25.3 pins gitpython==3.1.17, which is yanked on PyPI.  Override it to a
# maintained, API-compatible release so the resolver succeeds.
override-dependencies = [
    "gitpython>=3.1.30",
]
